<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/CardLayout"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_rounded_border">

        <android.support.design.widget.TextInputLayout
            style="@style/CardInputLine">

            <EditText
                android:id="@+id/contact_name"
                style="@style/RegisterInput"
                android:hint="@string/contact_name_hint"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/CardInputLine">

            <EditText
                android:id="@+id/contact_email"
                style="@style/RegisterInput"
                android:hint="@string/contact_email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:id="@+id/container_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                style="@style/CardInputLine"
                android:layout_width="120dp"
                android:id="@+id/content_contact_ddd"
                android:layout_marginRight="6dp">

                <EditText
                    android:id="@+id/contact_ddd"
                    style="@style/RegisterInput"
                    android:hint="@string/contact_ddd"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textSize="16sp"
                    tools:text="12"
                    android:nextFocusDown="@+id/contact_phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CardInputLine"
                android:id="@+id/content_contact_phone"
                android:layout_toRightOf="@+id/content_contact_ddd">

                <EditText
                    android:id="@+id/contact_phone"
                    style="@style/RegisterInput"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textSize="16sp"
                    tools:text="912345678"
                    android:hint="@string/contact_phone"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_with_touchfeedback"
        android:layout_gravity="bottom"
        android:text="@string/submit"/>

</LinearLayout>